# sophie

./: .openhands_instructions  OLDpackage-lock.json  README.md  SophieAgent.jsx  index.html  overview.md  package-lock.json  package.json  pyproject.toml  server.js  webpack-config.js  webpack.config.js
.github/ISSUE_TEMPLATE/: config.yml  docs-template.md  feature-request-template.md  security-issue-template.md  task-template.md
.github/workflows/: generate-lockfile.yml  main.yml  test.yml
.github/workflows/ISSUE_TEMPLATE/: bug-report-template.md
agents/: ProjectManagerAgent.md
docs/: ContentCategories.md  Deploy.md  Design.md  Interfaces.md  LaunchPlan.md  Monitoring.md  PRD.md  ProjectPlan.md  Requirements.md  Runbook.md  Security.md  Telemetry.md  Testing.md
docs/source/: conf.py  index.rst
public/: index.html
public/docs/doctrees/: environment.pickle  index.doctree
public/docs/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
src/: index.js  styles.css
src/__tests__/: example.test.js
src/components/: Card.jsx
src/components/SophieAgent/: SophieAgent.jsx  SophieAgent.test.jsx
