[tool.poetry]
name = "sophie"
version = "0.1.0"
description = "A simple todo assistant app"
authors = ["evelynmitchell <efmphone@gmail.com>"]
license = "MIT"
readme = "README.md"

package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
Sphinx = "^8.1.3"
linkify-it-py = "*"
myst_parser = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
